--- a/src/index.css
+++ b/src/index.css
@@ -6,4 +6,19 @@
 
     font-family: "Inter";
     font-size: 24px;
+    color: #e6f3fe;
+}
+
+body {
+    width: 100%;
+    height: 100vh;
+
+    overflow: hidden;
+
+    background-color: #171f38;
+}
+
+#root {
+    width: 100%;
+    height: 100%;
 }
