--- a/src/index.css
+++ b/src/index.css
@@ -6,6 +6,7 @@
 
     font-family: "Inter";
     font-size: 24px;
+    font-weight: 600;
     color: #97a5ce;
 }
 
@@ -38,7 +39,7 @@ body {
 /* HOME */
 #layout {
     padding: 0 11vw;
-    gap: 10%;
+    gap: 8%;
     width: 100%;
 }
 
@@ -47,21 +48,80 @@ body {
     background: none;
     padding: 0;
     width: 100%;
-    gap: 7vh;
+    gap: 5vh;
 }
 
-#page-title {
+#pageTitle {
     color: #68d373;
     font-size: 32;
-    font-weight: 600;
 }
 
 #searchBar {
     font-size: 32px;
     width: 100%;
+    font-weight: 500;
+    font-family: inter;
+}
+
+#content {
+    width: 100%;
+    height: 100%;
+
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(30%, 1fr));
+
+    grid-gap: 56px;
+    overflow: scroll;
+}
+
+/* Hide scrollbar for Chrome, Safari and Opera */
+#content::-webkit-scrollbar {
+    display: none;
+}
+
+/* Hide scrollbar for IE, Edge and Firefox */
+#content {
+    -ms-overflow-style: none; /* IE and Edge */
+    scrollbar-width: none; /* Firefox */
+}
+
+.supplierCard {
+    height: fit-content;
+    min-height: 302px;
+    max-width: 525px;
+
+    padding: 40px;
+
+    background-color: #242e4c;
+    border: none;
+
+    cursor: pointer;
+}
+
+.cardTitle {
+    color: #e6f3fe;
+    font-family: "Montserrat";
+}
+
+.cardHeader {
+    line-height: 30px;
+}
+
+.cardBody {
+    height: 100%;
+    gap: 24px;
+}
+
+.cardContent {
+    font-size: 20px;
+    line-height: normal;
 }
 
 /* ANTD FIXES */
+.ant-card-body {
+    padding: 0 !important;
+}
+
 ::-webkit-input-placeholder {
     color: #97a5ce !important;
 }
@@ -80,4 +140,19 @@ body {
 
 .ant-input-affix-wrapper {
     color: #97a5ce !important;
+}
+
+@media (max-width: 1700px) {
+    #content {
+        grid-template-columns: repeat(auto-fit, minmax(35%, 1fr));
+    }
+    .supplierCard {
+        max-width: 100%;
+    }
+}
+
+@media (max-width: 1130px) {
+    #content {
+        grid-template-columns: repeat(auto-fit, minmax(100%, 1fr));
+    }
 }
