--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -10,6 +10,10 @@
     color: #97a5ce;
 }
 
+fieldset {
+    border: none;
+}
+
 body {
     width: 100%;
     height: 100vh;
@@ -29,6 +33,17 @@ body {
 .flex-col {
     display: flex;
     flex-direction: column;
+}
+
+.flex-center {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.items-start {
+    display: flex;
+    align-items: start;
 }
 
 .divider {
